--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,13 @@ html, body {
   margin-right: 0.5rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 640px) {
+    #saturn, #jupiter {
+        margin-right: 2.5rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
     #saturn, #jupiter {
         margin-right: 2rem;
     }
